[package]
name = "kiln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
id3 = "1.12.0"
image = "0.24.8"
nom = "7.1.3"
